# blueprint

./: .gitignore  Makefile  Makefile.config.in  Makefile.inc.in  README.md  configure.ac  index.html  params.json
base/: Makefile  pervasives.mp  reveal.mp
chart/: Makefile  legend.mp
chart-ocaml/: MVC.ml  MVC.mli  Makefile  REFERENCES  TICKETS  application.ml  card.ml  chart.ml  chart.mli  chartMVC.ml  chartMVC.mli  chartPalette.ml  chartPalette.mli  chartProperties.mli  chartSpaceAllocation.ml  chartSpaceAllocation.mli  colors.text  example.ml  gChart.ml  gChart.mli  gHelper.ml  patternMVC.ml  patternSubjectObserver.ml  timeprofile.csv  util.ml
example/: .gitignore  Makefile  example.tex  example_legend.mp  example_schedule.mp  example_timeline.mp  example_umlcomponent.mp  monadic_buffer.ml  preamble.mp
pm/: Makefile  schedule.mp  timeline.mp
uml/: Makefile  component.mp
